--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,12 @@
 {
     "name": "hypershop/module-spike-performance",
-    "description": "Magento 2 module to prevent cache flushes during peak moments",
-    "type": "magento2-module",
     "version": "100.4.5",
+    "type": "magento2-module",
+    "description": "Magento 2 module to prevent cache flushes during peak moments",
+    "homepage": "https://github.com/hypershopbv/Hypershop_SpikePerformance",
+    "license": [
+        "OSL-3.0"
+    ],
     "autoload": {
         "files": [
             "registration.php"
