Updated composer file

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "name": "hypershop/module-spike-performance",
     "version": "100.4.5.1",
     "type": "magento2-module",
+    "versions": "2.3.x, 2.4.x",
+    "featured": false,
     "description": "Magento 2 module to prevent cache flushes during peak moments",
     "homepage": "https://github.com/hypershopbv/Hypershop_SpikePerformance",
     "license": [
